Fixing color of form on mobile

--- a/src/css/_donate.scss
+++ b/src/css/_donate.scss
@@ -96,3 +96,7 @@
   padding-top: 0;
   margin-top: 0;
 }
+
+#donate_form_container .fsOptionLabel {
+  color: #003a70 !important;
+}
